--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -3,6 +3,6 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/market
-    username: root
-    password: 1234
+    url: jdbc:mysql://poceania.o-r.kr:3306/card
+    username: card
+    password: card123
