db연결 테스트, 메인페이지 제작

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 			<version>2.7.4</version>
 		</dependency>
 		<dependency>
