이메일인증 오류 처리(구글 2차비밀번호 문제)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     host:  smtp.gmail.com
     port: 587
     username: poseania1358@gmail.com
-    password: evhmterdwkgwtqwy
+    password: eshddhvbwotbfkkz
     properties:
       mail:
         smtp:
